Revert "fixed z-index issue in navigation"
This reverts commit 489fa1c8525116ffd4084ba9d5fdb966326255ea.

--- a/wp-content/themes/engage/assets/scss/components/_menu.scss
+++ b/wp-content/themes/engage/assets/scss/components/_menu.scss
@@ -192,7 +192,6 @@
 // Styles for dropdown menus
 
 .menu__sublist {
-  z-index: 999;
   position: absolute;
   width: max-content;
   // margin-top: 15px;
@@ -214,7 +213,6 @@
 }
 
 .menu__sublist .menu__sublist {
-  z-index: 999;
   display: none;
   position: absolute;
   top: -20px;
